// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodListItem matches snapshot 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  disabled={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View>
          <SvgMock
            color="#121314"
            fill="currentColor"
            height={20}
            name="Card"
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
            width={20}
          />
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 18,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Debit or Credit
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          5 to 10 minutes.
        </Text>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "display": "flex",
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            0.10596 ETH
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            ~ $499.97
          </Text>
        </View>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`PaymentMethodListItem renders as selected when isSelected is true 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  disabled={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View>
          <SvgMock
            color="#121314"
            fill="currentColor"
            height={20}
            name="Card"
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
            width={20}
          />
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 18,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Debit or Credit
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          5 to 10 minutes.
        </Text>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "display": "flex",
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            0.10596 ETH
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            ~ $499.97
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityRole="checkbox"
    accessible={true}
    style={
      {
        "backgroundColor": "#3c4d9d0f",
        "bottom": 0,
        "flexDirection": "row",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</TouchableOpacity>
`;
